--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <li>Color: Negro y blanco</li>
         </ol>
 
-        <img src="/img/uno.jpeg" alt="Mi perro">
-        <img src="/img/dos.jpeg" alt="Mi perro x2">
+        <img src="img/uno.jpeg" alt="Mi perro">
+        <img src="img/dos.jpeg" alt="Mi perro x2">
 
     </center>
         <script src="" async defer></script>
